<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
    android:id="@+id/tableid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textColor="#325288"
    android:textSize="24sp"
    android:textStyle="bold|italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text=" Choisir la place exacte"
        android:textColor="#325288"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/table" />

    <Button
        android:id="@+id/place4"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="16dp"
        android:layout_toStartOf="@+id/place8"
        android:layout_toLeftOf="@+id/place8"
        android:text="@string/_4"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/place8"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place8"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="290dp"
        android:text="@string/_8"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/place5"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_marginTop="88dp"
        android:layout_toStartOf="@+id/place6"
        android:layout_toLeftOf="@+id/place6"
        android:text="@string/_5"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toEndOf="@+id/place6"
        app:layout_constraintTop_toBottomOf="@+id/place3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place6"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:layout_toStartOf="@+id/place7"
        android:layout_toLeftOf="@+id/place7"
        android:text="@string/_6"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/place7"
        app:layout_constraintTop_toBottomOf="@+id/place2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place7"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="91dp"
        android:text="@string/_7"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place2"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="220dp"

        android:text="@string/_2"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/place1"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place3"
        android:layout_width="38dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginTop="220dp"
        android:text="@string/_3"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/place2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place1"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="220dp"
        android:layout_toStartOf="@+id/place2"
        android:layout_toLeftOf="@+id/place2"
        android:text="@string/_1"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>